--- a/_config.yml
+++ b/_config.yml
@@ -156,7 +156,7 @@ giscus:
         crossorigin="anonymous"
         async>
   </script>
-  repo: eigenlucy/eigenlucy.github.io # <your-github-user-name>/<your-github-repo-name>
+  repo: <eigenlucy>/<eigenlucy.github.io> # <your-github-user-name>/<your-github-repo-name>
   repo_id: # leave empty or specify your repo_id (see https://giscus.app/)
   category: Comments # name of the category under which discussions will be created
   category_id: # leave empty or specify your category_id (see https://giscus.app/)
