removed medium rss fetch request

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ lastfm_id: # your lastfm id
 lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 linkedin_username: # your LinkedIn user name
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-medium_username: lucycchambers12 # your Medium username
+medium_username: # your Medium username
 orcid_id: # your ORCID ID
 osf_id: # your OSF ID
 pinterest_id: # your pinterest id
@@ -162,8 +162,8 @@ disqus_shortname: al-folio # put your disqus shortname
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
-  - name: medium.com
-    rss_url: medium.com/@lucycchambers12
+  - name: 
+    rss_url: 
 # -----------------------------------------------------------------------------
 # Collections
 # -----------------------------------------------------------------------------
