--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,11 +2,11 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Lucy Chambers
     - name: Date of Birth
-      value: 14th March 1879
+      value: 11th May 2001
     - name: Languages
-      value: English, German
+      value: English, C++, Python
 
 - title: Education
   type: time_table
