--- a/_config.yml
+++ b/_config.yml
@@ -281,8 +281,8 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["formatting", "images", "links", "math", "code"] # these tags will be displayed on the front page of your blog
-display_categories: ["blockquotes"] # these categories will be displayed on the front page of your blog
+display_tags: ["electrical engineering", "mycology", "projects", "programming"] # these tags will be displayed on the front page of your blog
+display_categories: ["featured"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
