--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ kaggle_id: # your kaggle id
 keybase_username: # your keybase user name
 lastfm_id: # your lastfm id
 lattes_id: # your ID on Lattes (Brazilian Lattes CV)
-linkedin_username: lucy-chambers-46 # your LinkedIn user name
+linkedin_username: lucy-chambers-46b257303 # your LinkedIn user name
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 medium_username: machinegirl # your Medium username
 orcid_id: # your ORCID ID
