--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,7 @@ email: eigenlucy@proton.me
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Eigenlucy // Lucy Chambers' portfolio
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/alshedivat/al-folio">al-folio</a>.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+  <a href="https://github.com/eigenlucy/eigenlucy.github.io">site git repo</a>. Hosted with <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: portfolio, engineer, resume, cv, tech, STEM # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🤖 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
