testing hackaday profile integration

--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,7 @@ ieee_id: # your ieeexplore.ieee.org/author/id
 instagram_id: autopoieesis # your instagram id
 kaggle_id: # your kaggle id
 keybase_username: # your keybase user name
+hackaday_username: eigenlucy
 lastfm_id: # your lastfm id
 lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 linkedin_username: lucy-chambers-46b257303 # your LinkedIn user name
