--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ ieee_id: # your ieeexplore.ieee.org/author/id
 instagram_id: autopoieesis # your instagram id
 kaggle_id: # your kaggle id
 keybase_username: # your keybase user name
-hackaday_username: eigenlucy
+hackaday_url: https://hackaday.io/eigenlucy
 lastfm_id: # your lastfm id
 lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 linkedin_username: lucy-chambers-46b257303 # your LinkedIn user name
@@ -95,14 +95,14 @@ scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
 stackoverflow_id: # your stackoverflow id
-telegram_username: # your Telegram user name
+telegram_username: eigenlucy # your Telegram user name
 unsplash_id: # your unsplash id
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 wikidata_id: # your wikidata id
 wikipedia_id: # your wikipedia id (Case sensitive)
 work_url: # work page URL
-x_username: # your X handle
+x_username: eigenlucy # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
