--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ navbar_fixed: true
 footer_fixed: true
 
 # Dimensions
-max_width: 800px
+max_width: 85%
 
 # TODO: add layout settings (single page vs. multi-page)
 
