--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,6 +75,8 @@ jobs:
           value: ${{ github.repository }}
       - name: Install ImageMagick
         run: sudo apt-get update && sudo apt-get install -y imagemagick
+      - name: Clean and Recompile Gems
+        run: bundle pristine --all
       - name: Install and Build 🔧
         run: |
           pip3 install --upgrade jupyter
