--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Install ImageMagick
         run: sudo apt-get update && sudo apt-get install -y imagemagick
       - name: Clean and Recompile Gems
-        run: bundle pristine --all
+        run: bundle pristine # Corrected command
       - name: Install and Build 🔧
         run: |
           pip3 install --upgrade jupyter
