--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "prettier": "3.1.1"
   },
   "dependencies": {
-    "@anthropic-ai/claude-code": "^0.2.29"
+    "@anthropic-ai/claude-code": "^0.2.29",
+    "@playwright/mcp": "^0.0.32",
+    "jsonresume-theme-even": "^0.23.0"
   }
 }
