--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ whatsapp_number: # your WhatsApp number (full phone number in international form
 wikidata_id: # your wikidata id
 wikipedia_id: # your wikipedia id (Case sensitive)
 work_url: # work page URL
-x_username: eigenlucy # your X handle
+x_username: # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
@@ -226,6 +226,7 @@ exclude:
   - INSTALL.md
   - LICENSE
   - lighthouse_results/
+  - node_modules/
   - package.json
   - package-lock.json
   - _pages/about_einstein.md
