--- a/_config.yml
+++ b/_config.yml
@@ -484,8 +484,8 @@ third_party_libraries:
       css: "sha256-yUoNxsvX+Vo8Trj3lZ/Y5ZBf8HlBFsB6Xwm7rH75/9E="
       js: "sha256-BPrwikijIybg9OQC5SYFFqhBjERYOn97tCureFgYH1E="
     url:
-      css: "https://cdn.jsdelivr.net/npm/swiper@{{version}}/swiper-bundle.min.css"
-      js: "https://cdn.jsdelivr.net/npm/swiper@{{version}}/swiper-element-bundle.min.js"
+      css: "https://cdn.jsdelivr.net/npm/swiper@11.0.5/swiper-bundle.min.css"
+      js: "https://cdn.jsdelivr.net/npm/swiper@11.0.5/swiper-element-bundle.min.js"
     version: "11.0.5"
   swiper-map:
     integrity:
